force-app/main/default/objects/sumoapp__SumoEventStream__e/sumoapp__SumoEventStream__e.object-meta.xml
<CustomObject>
    <label>Sumo Event Stream</label>
    <pluralLabel>Sumo Event Stream</pluralLabel>
</CustomObject>