force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Attendees__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Attendees__c</fullName>
    <label>Attendees</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>