force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Color__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Color__c</fullName>
    <description>Html Color Code</description>
    <label>Color</label>
    <length>32</length>
    <type>Text</type>
</CustomField>