force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Deleted__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>