force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Description__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>