force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__EndTime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EndTime__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>