force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Exception__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Exception__c</fullName>
    <label>Exception</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>