force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__IsUncommited__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsUncommited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUncommited</label>
    <type>Checkbox</type>
</CustomField>