force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Location__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>