force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__LocationId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LocationId__c</fullName>
    <label>Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>