force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Name__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>