force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Organizer__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Organizer__c</fullName>
    <label>Organizer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>