force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__ProcessId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ProcessId__c</fullName>
    <label>Process Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>