force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__PropagatedToExternalCalendar__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PropagatedToExternalCalendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Propagated To External Calendar</label>
    <type>Checkbox</type>
</CustomField>