force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__Resources__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Resources__c</fullName>
    <label>Resources</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>