force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__StartTime__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__StartTime__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>