force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__SumoEventId__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SumoEventId__c</fullName>
    <label>Sumo Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>