force-app/main/default/objects/sumoapp__SumoEventStream__e/fields/sumoapp__TravelTimeAfter__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__TravelTimeAfter__c</fullName>
    <label>Travel Time After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>